Adding Github authentication

--- a/views/login.jade
+++ b/views/login.jade
@@ -24,5 +24,6 @@ block content
 
                   button.btn.btn-lg.btn-success.btn-block Войти
                   a.btn.btn-lg.btn-primary.btn-block(href='/auth/vk') Войти через ВК
+                  a.btn.btn-lg.btn-primary.btn-block(href='/auth/github') Войти через Github
                   hr
                   a.btn.btn-lg.btn-warning.btn-block(href='/signup') Зарегистрироваться
