--- a/views/navbar.jade
+++ b/views/navbar.jade
@@ -6,7 +6,7 @@ nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='/') Doge Blog
+    a.navbar-brand(href='/') Doge Blog
     div#navbar.collapse.navbar-collapse
       ul.nav.navbar-nav
         li.active
@@ -14,6 +14,8 @@ nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
             span.glyphicon.glyphicon-home
         li
           a(href='/new') New Post
+        li
+          a.navbar-brand(href='/profile') Profile
       ul.nav.navbar-nav.navbar-right
         li
           a(href="/logout") Выйти
